# drink_is_all_you_need

./: .gitignore  README.md  pyproject.toml
.claude/plans/: overall.md
ai/: process.py  pyproject.toml  vision.py
ai/tests/: test.md  test_pipeline.py
ai/tests/images/test_25/: result.json
ai/tests/images/test_50/: result.json
ai/tests/images/test_pure_10/: result.json
ai/tests/images/test_pure_20/: result.json
ai/tests/images/test_pure_70/: result.json
ai/tests/images/test_pure_80/: result.json
backend/: app.py  config.py  gen_regions.py  pyproject.toml  test_pipeline.md  test_pipeline.py  volume_estimator.py
backend/tests/: test.md  test_pipeline.py
pages/: camera.html  index.html
slides/: package-lock.json  package.json  slides.md  style.css
web-server/: app.py  config.py  pyproject.toml
web-server/pages/: dashboard.html  index.html
